chore: cleanup unused code and modernize Java API usage
- Use `getFirst()` instead of `get(0)` in tests for sequenced collections
- Remove unused fields, getters, and internal methods across workflow and aggregation classes
- Simplify `UnsupportedAggregationPartException` by removing unused constructor parameters
- Replace manual getter with Lombok `@Getter` in `ComputationException`
- Streamline validation logic and Javadoc descriptions in workflow steps